# Weighted-Triangulation-Editor

./: CMakeLists.txt  README.rst
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  pointeditor.cpp  pointeditor.h  pointseteditor.cpp  pointseteditor.h  renderpointset.cpp  renderpointset.h  rendertriangulation.cpp  rendertriangulation.h  tmap.cpp  tmap.h  triangulatedmap.cpp  triangulatedmap.h
